reddit clone angular project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<div class="ui bottom attached segment">
+  <app-sidebar></app-sidebar>
+  <div class="pusher">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
